--- a/pages/login.hbs
+++ b/pages/login.hbs
@@ -20,15 +20,15 @@
         {{#if message.type}}
           {{#if (isError message.type)}}
               <div class="bg-red-100 rounded-lg py-5 px-6 mb-4 text-base text-red-700 mb-3 alert" role="alert">
-                {{message.message}}
+                {{{message.message}}}
               </div>
           {{else if (isWarning message.type)}}
               <div class="bg-blue-100 rounded-lg py-5 px-6 mb-4 text-base text-blue-700 mb-3 alert" role="alert">
-                {{message.message}}
+                {{{message.message}}}
               </div>
           {{else if (isOk message.type)}}
               <div class="bg-green-100 rounded-lg py-5 px-6 mb-4 text-base text-green-700 mb-3 alert" role="alert">
-                {{message.message}}
+                {{{message.message}}}
               </div>
           {{/if}}
         {{/if}}
@@ -44,7 +44,7 @@
                 <label for="password" class="leading-7 text-sm text-gray-400">Password</label>
                 <input type="password" id="password" name="password" class="w-full bg-gray-600 bg-opacity-20 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 rounded border border-gray-600 focus:border-indigo-500 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
                 </div>
-                <button type="submit" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" style="width: 100%;">Button</button>
+                <button type="submit" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" style="width: 100%;">Login</button>
             </form>
           </div>
         </div>
