--- a/pages/homepage.hbs
+++ b/pages/homepage.hbs
@@ -103,7 +103,7 @@
             <div class="row mt-3" style="padding-left: 10px; padding-right: 10px">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="width: 90%; text-align: left">
                 <h5 class="text-uppercase fw-bold"><b>About Me</b></h5>
-                <hr class="mb-9 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px"/>
+                <hr class="mb-9 mt-0 d-inline-block" style="width: 60px; background-color: #7c4dff; height: 2px"/>
                 <p>
                     My name is Saptarshi Dey and I am currently enrolled for B. Tech in Guru Nanak Institute of Technology
                 </p>
